app/src/main/java/com/example/bookclub/errors/StudyStartAndEndTimeNotValidException.java
package com.example.bookclub.errors;

public class StudyStartAndEndTimeNotValidException extends RuntimeException {
    public StudyStartAndEndTimeNotValidException() {
        super("Study StartTime and EndTime not valid");
    }
}
